# pytorch-transfer-learning

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
pytorch_transfer_learning/: functions.py  predict.py  train.py
