[project]
name = "pytorch-transfer-learning"
version = "0.1.0"
description = "A tool to train a CNN for image classification using transfer learning (from https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html)"
authors = [{ name = "Erik Ferlanti", email = "eferlanti@tacc.utexas.edu" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "torch",
    "torchvision",
    "scipy>=1.15.2,<2",
    "matplotlib>=3.10.1,<4",
    "rich>=13.9.4,<14",
    "click>=8.1.8,<9",
    "click-loglevel>=0.6.0,<0.7",
]

[project.urls]
repository = "https://github.com/eriksf/pytorch-transfer-learning"

[project.scripts]
train = "pytorch_transfer_learning.train:main"
predict = "pytorch_transfer_learning.predict:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.11.1,<0.12",
]

[tool.uv]

[tool.uv.sources]
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { url = "https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp312-cp312-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { url = "https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.21.0-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { url = "https://download.pytorch.org/whl/cu126/torchvision-0.21.0-cp312-cp312-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { url = "https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.hatch.build.targets.sdist]
include = ["pytorch_transfer_learning"]

[tool.hatch.build.targets.wheel]
include = ["pytorch_transfer_learning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".git", ".ruff_cache", ".vscode"]
line-length = 300

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.pytest.ini_options]
addopts = "--verbose --cov=pytorch_transfer_learning"

[tool.poetry_bumpversion.file."pytorch_transfer_learning/version.py"]
